Добавил пункты 3, 4, 5 в файл 003/03

--- a/notes/2024-10-09.md
+++ b/notes/2024-10-09.md
@@ -1,2 +1,4 @@
 # Заметки для конспекта
-Добавить в Pull Request Скриншотов с GitHub
+1.Добавить в Pull Request Скриншотов с GitHub
+
+2. Посмотреть поизучать EMMET
