--- a/notes/2024-10-09.md
+++ b/notes/2024-10-09.md
@@ -1,4 +1,3 @@
 # Заметки для конспекта
-1. Добавить в Pull Request Скриншотов с GitHub
-
+1. ~~Добавить в Pull Request Скриншотов с GitHub~~
 2. Посмотреть поизучать EMMET
